k8s/deployment-init-container.yaml
# Alternative 1: Build Plugin in a initContainer

apiVersion: apps/v1
kind: Deployment

metadata:
  name: example-app
  namespace: example-namespace
  labels:
    app: example-app

spec:
  selector:
    matchLabels:
      app: example-envoy

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: example-app

    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.39-latest
          imagePullPolicy: Always

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          volumeMounts:
            - name: plugins
              mountPath: /etc/envoy/proxy-wasm-plugins
            - name: envoy-config
              mountPath: /etc/envoy

          startupProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          ports:
            - containerPort: 10000
              name: http
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

          command:
            ["envoy", "-c", "/etc/envoy/envoy.yaml", "--concurrency", "1"]

      volumes:
        - name: plugins
          emptyDir: {}
        - name: envoy-config
          configMap:
            name: example-envoy-config
            items:
              - key: envoy.yaml
                path: envoy.yaml

      restartPolicy: Always
