k8s/deployment-initContainer.yaml
# Alternative 1: Build Plugin in a initContainer

apiVersion: apps/v1
kind: Deployment

metadata:
  name: example-app
  namespace: example-namespace
  labels:
    app: example-app

spec:
  selector:
    matchLabels:
      app: example-envoy
  replicas: 1

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: example-app

    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.29-latest

          resources:
            requests:
              cpu: 50Mi
              memory: 80Mi
            limits:
              cpu: 300m
              memory: 300Mi

          volumeMounts:
            - name: plugins
              mountPath: /etc/envoy/proxy-wasm-plugins
            - name: envoy-config
              mountPath: /etc/envoy

          ports:
            - containerPort: 10000
              name: http
              protocol: TCP

          command:
            ["envoy", "-c", "/etc/envoy/envoy.yaml", "--concurrency", "1"]

      volumes:
        - name: plugins
          emptyDir: {}
        - name: envoy-config
          configMap:
            name: example-envoy-config
            items:
              - key: envoy.yaml
                path: envoy.yaml

      restartPolicy: Always
