k8s/deployment-pre-built.yml
# Alternative 2: Use pre-built [Docker-Image](https://hub.docker.com/r/antonengelhardt/wasm-oidc-plugin) from Docker Hub

apiVersion: apps/v1
kind: Deployment

metadata:
  name: example-app
  namespace: example-namespace
  labels:
    app: example-app

spec:
  selector:
    matchLabels:
      app: example-envoy

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: example-app

    spec:
      imagePullSecrets:
        - name: ghcr #! Add this if your repo is private

      containers:
        - name: envoy
          image: ghcr.io/antonengelhardt/wasm-oidc-plugin:latest

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy/envoy.yaml
              subPath: envoy.yaml

          startupProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /plugin-health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5

          ports:
            - containerPort: 10000
              name: http
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

          command:
            ["envoy", "-c", "/etc/envoy/envoy.yaml", "--concurrency", "1"]

      volumes:
        - name: envoy-config
          configMap:
            name: example-envoy-config
            defaultMode: 420
            items:
              - key: envoy.yaml
                path: envoy.yaml

      restartPolicy: Always
